# AI-Yinsh-v2

./: .gitignore  Agent.cpp  Agent.h  Board.cpp  Board.h  CMakeLists.txt  README.md  client.py  compile.sh  dumbot  main.cpp  qtraining.cpp  run.sh  test.cpp  writeup.txt
2015CS10234_2014ME20762/: Agent.cpp  Agent.h  Board.cpp  Board.h  compile.sh  run.sh
